--- a/books/List.html
+++ b/books/List.html
@@ -1,22 +1,21 @@
 
 
-
-<!--#include virtual = "/2023/common/inc/head.asp"-->
-
+<!-- js -->
+<script type="text/javascript" src="../common/js/jquery-1.8.3.min.js"></script>
 
 
 <body>
 
-
+<div class="headerInc"></div>
 
 <div class="bookListWrap">
-<!-- gnb -->
-<!--#include virtual = "/2023/common/inc/gnb.asp"-->
+	<!-- gnb -->
+	<div class="gnbInc"></div>
 
 	<section class="subMainWrap">
 		<div class="container">
 			<div class="mainBnrList">
-				<a href="javascript:void(0)" class="bgImageSet" style="background-image: url('/2023/common/img/main/banner.png')">
+				<a href="javascript:void(0)" class="bgImageSet" style="background-image: url('../common/img/main/banner.png')">
 					<div class="container">
 						<h2><span class="lightTxt"></span>NEW & HOT<br>
 							<b>이번주 신상 랭킹</b></h2>
@@ -97,7 +96,7 @@
 					<!-- 디자인 -->
 					<div class="eduList" id="maincurri01">
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+							<a href="../books/detail.asp"><img src="../common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -111,7 +110,7 @@
 
 
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+							<a href="../books/detail.asp"><img src="../common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -124,7 +123,7 @@
 						</div>
 
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+							<a href="../books/detail.asp"><img src="../common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -137,7 +136,7 @@
 						</div>
 
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+							<a href="../books/detail.asp"><img src="../common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -150,7 +149,7 @@
 						</div>
 
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+							<a href="../books/detail.asp"><img src="../common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -163,7 +162,7 @@
 						</div>
 
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+							<a href="../books/detail.asp"><img src="../common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -176,7 +175,7 @@
 						</div>
 
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+							<a href="../books/detail.asp"><img src="../common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -189,7 +188,7 @@
 						</div>
 
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+							<a href="../books/detail.asp"><img src="../common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -202,7 +201,7 @@
 						</div>
 
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+							<a href="../books/detail.asp"><img src="../common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -215,7 +214,7 @@
 						</div>
 
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+							<a href="../books/detail.asp"><img src="../common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -228,7 +227,7 @@
 						</div>
 
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+							<a href="../books/detail.asp"><img src="../common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -241,7 +240,7 @@
 						</div>
 
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+							<a href="../books/detail.asp"><img src="../common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -254,7 +253,7 @@
 						</div>
 
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+							<a href="../books/detail.asp"><img src="../common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -267,7 +266,7 @@
 						</div>
 
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+							<a href="../books/detail.asp"><img src="../common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -286,7 +285,7 @@
 					<div class="eduList" id="maincurri02">
 
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover02.png" alt="">
+							<a href="../books/detail.asp"><img src="../common/img/main/book-cover02.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -299,7 +298,7 @@
 							<a class="eduSelect bgImageSet" href="javascript:informOpen();"></a>
 						</div>
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover02.png" alt="">
+							<a href="../books/detail.asp"><img src="../common/img/main/book-cover02.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -312,7 +311,7 @@
 							<a class="eduSelect bgImageSet" href="javascript:informOpen();"></a>
 						</div>
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover02.png" alt="">
+							<a href="../books/detail.asp"><img src="../common/img/main/book-cover02.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -325,7 +324,7 @@
 							<a class="eduSelect bgImageSet" href="javascript:informOpen();"></a>
 						</div>
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover02.png" alt="">
+							<a href="../books/detail.asp"><img src="../common/img/main/book-cover02.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -338,7 +337,7 @@
 							<a class="eduSelect bgImageSet" href="javascript:informOpen();"></a>
 						</div>
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover02.png" alt="">
+							<a href="../books/detail.asp"><img src="../common/img/main/book-cover02.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -351,7 +350,7 @@
 							<a class="eduSelect bgImageSet" href="javascript:informOpen();"></a>
 						</div>
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover02.png" alt="">
+							<a href="../books/detail.asp"><img src="../common/img/main/book-cover02.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -364,7 +363,7 @@
 							<a class="eduSelect bgImageSet" href="javascript:informOpen();"></a>
 						</div>
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover02.png" alt="">
+							<a href="../books/detail.asp"><img src="../common/img/main/book-cover02.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -377,7 +376,7 @@
 							<a class="eduSelect bgImageSet" href="javascript:informOpen();"></a>
 						</div>
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover02.png" alt="">
+							<a href="../books/detail.asp"><img src="../common/img/main/book-cover02.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -390,7 +389,7 @@
 							<a class="eduSelect bgImageSet" href="javascript:informOpen();"></a>
 						</div>
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover02.png" alt="">
+							<a href="../books/detail.asp"><img src="../common/img/main/book-cover02.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -403,7 +402,7 @@
 							<a class="eduSelect bgImageSet" href="javascript:informOpen();"></a>
 						</div>
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover02.png" alt="">
+							<a href="../books/detail.asp"><img src="../common/img/main/book-cover02.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -458,11 +457,15 @@
 
 
 	<!-- footer -->
-	<!--#include virtual = "/2023/common/inc/footer.asp"-->
+	<div class="footerInc"></div>
 
 
-
-
+	<script>
+	$('.headerInc').load('../common/inc/head_sub.html');
+	$('.gnbInc').load('../common/inc/gnb.html');
+	$('.footerInc').load('../common/inc/footer.html');
+	</script>
+			
 
 </body>
 </html>
