--- a/common/inc/mainBanner.html
+++ b/common/inc/mainBanner.html
@@ -3,7 +3,7 @@
 <section class="mainBnrWrap">
 	<div class="mainBnrList">
 
-		<div class="banner"  onclick="location.href='./community/notice.asp'">
+		<div class="banner"  onclick="location.href='./community/notice.html'">
 			<!-- pc -->
 			<div class="mCont bgImageSet pcShow" style="background-image: url('./common/img/main/banner/banner.png')">
 				<div class="container">
