--- a/common/inc/quick-menu.html
+++ b/common/inc/quick-menu.html
@@ -2,7 +2,7 @@
 		<div class="quickMenu">
 			<ul class="quickTop">
 				<li class="quick-deliver">
-					<a href="./mypage/purchase.asp">
+					<a href="./mypage/purchase.html">
 						<img src="./common/img/main/quick-deliver.png" alt="">
 						<span>배송조회</span>
 					</a>
@@ -11,14 +11,14 @@
 					</div>
 				</li>
 				<li class="quick-talk">
-					<a href="./mypage/inquiry.asp">
+					<a href="./mypage/inquiry.html">
 						<img src="./common/img/main/quick-talk.png" alt="">
 						<span>상담</span>
 					</a>
 
 				</li>
 				<li class="quick-bookmark">
-					<a href="./mypage/cart.asp">
+					<a href="./mypage/cart.html">
 						<img src="./common/img/main/quick-bookmark.png" alt="">
 						<span>장바구니</span>
 					</a>
