--- a/community/notice.html
+++ b/community/notice.html
@@ -1,7 +1,7 @@
 
 
 
-<!--#include virtual = "/2023/common/inc/head.asp"-->
+<!--#include virtual = "/2023/common/inc/head.html"-->
 
 
 
@@ -11,7 +11,7 @@
 
 <div class="noticeListWrap">
 <!-- gnb -->
-<!--#include virtual = "/2023/common/inc/gnb.asp"-->
+<!--#include virtual = "/2023/common/inc/gnb.html"-->
 
 
 	<section class="mt80 mypage-sec">
@@ -23,7 +23,7 @@
 
 				<ul class="noticePadList">
 					<li class="noticePad">
-						<a href="/2023/community/noticeView.asp">
+						<a href="/2023/community/noticeView.html">
 
 							<div class="noticeTxts">
 								<h3>여름맞이 멘토씨르즈 자바Lorem i Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id molestiae est magnam cupiditate nihil recusandae.</h3>
@@ -36,7 +36,7 @@
 					</li>
 
 					<li class="noticePad">
-						<a href="/2023/community/noticeView.asp">
+						<a href="/2023/community/noticeView.html">
 							<div class="noticeTxts">
 								<h3>여름맞이 멘토씨르즈 자바Lorem i</h3>
 								<div class="noticeDate">
@@ -47,7 +47,7 @@
 					</li>
 
 					<li class="noticePad">
-						<a href="/2023/community/noticeView.asp">
+						<a href="/2023/community/noticeView.html">
 							<div class="noticeTxts">
 								<h3>여름맞이 멘토씨르즈 자바Lorem i</h3>
 								<div class="noticeDate">
@@ -58,7 +58,7 @@
 					</li>
 
 					<li class="noticePad">
-						<a href="/2023/community/noticeView.asp">
+						<a href="/2023/community/noticeView.html">
 							<div class="noticeTxts">
 								<h3>여름맞이 멘토씨르즈 자바Lorem i</h3>
 								<div class="noticeDate">
@@ -69,7 +69,7 @@
 					</li>
 
 					<li class="noticePad">
-						<a href="/2023/community/noticeView.asp">
+						<a href="/2023/community/noticeView.html">
 							<div class="noticeTxts">
 								<h3>여름맞이 멘토씨르즈 자바Lorem i</h3>
 								<div class="noticeDate">
@@ -80,7 +80,7 @@
 					</li>
 
 					<li class="noticePad">
-						<a href="/2023/community/noticeView.asp">
+						<a href="/2023/community/noticeView.html">
 							<div class="noticeTxts">
 								<h3>여름맞이 멘토씨르즈 자바Lorem i</h3>
 								<div class="noticeDate">
@@ -91,7 +91,7 @@
 					</li>
 
 					<li class="noticePad">
-						<a href="/2023/community/noticeView.asp">
+						<a href="/2023/community/noticeView.html">
 							<div class="noticeTxts">
 								<h3>여름맞이 멘토씨르즈 자바Lorem i</h3>
 								<div class="noticeDate">
@@ -103,7 +103,7 @@
 
 
 					<li class="noticePad">
-						<a href="/2023/community/noticeView.asp">
+						<a href="/2023/community/noticeView.html">
 							<div class="noticeTxts">
 								<h3>여름맞이 멘토씨르즈 자바Lorem i</h3>
 								<div class="noticeDate">
@@ -149,7 +149,7 @@
 
 
 	<!-- footer -->
-	<!--#include virtual = "/2023/common/inc/footer.asp"-->
+	<!--#include virtual = "/2023/common/inc/footer.html"-->
 
 
 
