--- a/community/noticeView.html
+++ b/community/noticeView.html
@@ -1,7 +1,7 @@
 
 
 
-<!--#include virtual = "/2023/common/inc/head.asp"-->
+<!--#include virtual = "/2023/common/inc/head.html"-->
 
 
 
@@ -11,7 +11,7 @@
 
 <div class="mypageWrap noticeViewWrap">
 <!-- gnb -->
-<!--#include virtual = "/2023/common/inc/gnb.asp"-->
+<!--#include virtual = "/2023/common/inc/gnb.html"-->
 
 	<section class="mt80 mypage-sec">
 		<div class="container">
@@ -64,7 +64,7 @@
 
 
 	<!-- footer -->
-	<!--#include virtual = "/2023/common/inc/footer.asp"-->
+	<!--#include virtual = "/2023/common/inc/footer.html"-->
 
 
 
