--- a/customer/purchase_inform.html
+++ b/customer/purchase_inform.html
@@ -19,7 +19,7 @@
 
 				<ul class="cartOrder">
 					<li class="btn"><a href="javascript:informClose();">쇼핑 계속하기</a></li>
-					<li  class="btn"><a href="/2023/mypage/cart.asp">장바구니 확인</a></li>
+					<li  class="btn"><a href="/2023/mypage/cart.html">장바구니 확인</a></li>
 				</ul>
 			</div><!-- reviewCntWrap -->
 
