--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<div class="mainCnt mnCnt01">
 
 				<div class="eduTab">
-					<a href="./books/list.asp" class="cateBnt moShow bgImageSet">
+					<a href="./books/list.html" class="cateBnt moShow bgImageSet">
 						<span>카테고리</span>
 					</a>
 
@@ -57,7 +57,7 @@
 
 
 						<div class="eduCntWrap">
-							<a href="./books/detail.asp"><img src="./common/img/main/book-cover01.png" alt="">
+							<a href="./books/detail.html"><img src="./common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -73,7 +73,7 @@
 
 
 						<div class="eduCntWrap">
-							<a href="./books/detail.asp"><img src="./common/img/main/book-cover01.png" alt="">
+							<a href="./books/detail.html"><img src="./common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -88,7 +88,7 @@
 
 
 						<div class="eduCntWrap">
-							<a href="./books/detail.asp"><img src="./common/img/main/book-cover01.png" alt="">
+							<a href="./books/detail.html"><img src="./common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -101,7 +101,7 @@
 						</div>
 
 						<div class="eduCntWrap">
-							<a href="./books/detail.asp"><img src="./common/img/main/book-cover01.png" alt="">
+							<a href="./books/detail.html"><img src="./common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -114,7 +114,7 @@
 						</div>
 
 						<div class="eduCntWrap">
-							<a href="./books/detail.asp"><img src="./common/img/main/book-cover01.png" alt="">
+							<a href="./books/detail.html"><img src="./common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -127,7 +127,7 @@
 						</div>
 
 						<div class="eduCntWrap">
-							<a href="./books/detail.asp"><img src="./common/img/main/book-cover01.png" alt="">
+							<a href="./books/detail.html"><img src="./common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -140,7 +140,7 @@
 						</div>
 
 						<div class="eduCntWrap">
-							<a href="./books/detail.asp"><img src="./common/img/main/book-cover01.png" alt="">
+							<a href="./books/detail.html"><img src="./common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -153,7 +153,7 @@
 						</div>
 
 						<div class="eduCntWrap">
-							<a href="./books/detail.asp"><img src="./common/img/main/book-cover01.png" alt="">
+							<a href="./books/detail.html"><img src="./common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -166,7 +166,7 @@
 						</div>
 
 						<div class="eduCntWrap">
-							<a href="./books/detail.asp"><img src="./common/img/main/book-cover01.png" alt="">
+							<a href="./books/detail.html"><img src="./common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -179,7 +179,7 @@
 						</div>
 
 						<div class="eduCntWrap">
-							<a href="./books/detail.asp"><img src="./common/img/main/book-cover01.png" alt="">
+							<a href="./books/detail.html"><img src="./common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -197,7 +197,7 @@
 					<div class="eduList" id="maincurri02">
 
 						<div class="eduCntWrap">
-							<a href="./books/detail.asp"><img src="./common/img/main/book-cover02.png" alt="">
+							<a href="./books/detail.html"><img src="./common/img/main/book-cover02.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -210,7 +210,7 @@
 							<a class="eduSelect bgImageSet" onclick="javascript:informOpen();"></a>
 						</div>
 						<div class="eduCntWrap">
-							<a href="./books/detail.asp"><img src="./common/img/main/book-cover02.png" alt="">
+							<a href="./books/detail.html"><img src="./common/img/main/book-cover02.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -223,7 +223,7 @@
 							<a class="eduSelect bgImageSet" onclick="javascript:informOpen();"></a>
 						</div>
 						<div class="eduCntWrap">
-							<a href="./books/detail.asp"><img src="./common/img/main/book-cover02.png" alt="">
+							<a href="./books/detail.html"><img src="./common/img/main/book-cover02.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -236,7 +236,7 @@
 							<a class="eduSelect bgImageSet" onclick="javascript:informOpen();"></a>
 						</div>
 						<div class="eduCntWrap">
-							<a href="./books/detail.asp"><img src="./common/img/main/book-cover02.png" alt="">
+							<a href="./books/detail.html"><img src="./common/img/main/book-cover02.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -249,7 +249,7 @@
 							<a class="eduSelect bgImageSet" onclick="javascript:informOpen();"></a>
 						</div>
 						<div class="eduCntWrap">
-							<a href="./books/detail.asp"><img src="./common/img/main/book-cover02.png" alt="">
+							<a href="./books/detail.html"><img src="./common/img/main/book-cover02.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -262,7 +262,7 @@
 							<a class="eduSelect bgImageSet" onclick="javascript:informOpen();"></a>
 						</div>
 						<div class="eduCntWrap">
-							<a href="./books/detail.asp"><img src="./common/img/main/book-cover02.png" alt="">
+							<a href="./books/detail.html"><img src="./common/img/main/book-cover02.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -275,7 +275,7 @@
 							<a class="eduSelect bgImageSet" onclick="javascript:informOpen();"></a>
 						</div>
 						<div class="eduCntWrap">
-							<a href="./books/detail.asp"><img src="./common/img/main/book-cover02.png" alt="">
+							<a href="./books/detail.html"><img src="./common/img/main/book-cover02.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -288,7 +288,7 @@
 							<a class="eduSelect bgImageSet" onclick="javascript:informOpen();"></a>
 						</div>
 						<div class="eduCntWrap">
-							<a href="./books/detail.asp"><img src="./common/img/main/book-cover02.png" alt="">
+							<a href="./books/detail.html"><img src="./common/img/main/book-cover02.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -301,7 +301,7 @@
 							<a class="eduSelect bgImageSet" onclick="javascript:informOpen();"></a>
 						</div>
 						<div class="eduCntWrap">
-							<a href="./books/detail.asp"><img src="./common/img/main/book-cover02.png" alt="">
+							<a href="./books/detail.html"><img src="./common/img/main/book-cover02.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -314,7 +314,7 @@
 							<a class="eduSelect bgImageSet" onclick="javascript:informOpen();"></a>
 						</div>
 						<div class="eduCntWrap">
-							<a href="./books/detail.asp"><img src="./common/img/main/book-cover02.png" alt="">
+							<a href="./books/detail.html"><img src="./common/img/main/book-cover02.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -360,7 +360,7 @@
 			</div>
 
 			
-			<a href="./books/list.asp" class="pcShow">
+			<a href="./books/list.html" class="pcShow">
 				<div class="mainCntBtn">
 					<span>교재 더보기</span>
 					<div class="btnArrow bgImageSet"></div>
@@ -388,7 +388,7 @@
 
 
 
-	<!--#include virtual = "./common/inc/midBanner.asp"-->
+	<!--#include virtual = "./common/inc/midBanner.html"-->
 
 
 
@@ -402,7 +402,7 @@
 			<div class="bookShow">
 
 
-				<a class="bookShowCnt" href="./books/detail.asp">
+				<a class="bookShowCnt" href="./books/detail.html">
 					<div class="bookTxts">
 
 						<div class="booKTxts-Tit">
@@ -440,7 +440,7 @@
 
 
 
-				<a class="bookShowCnt" href="./books/detail.asp">
+				<a class="bookShowCnt" href="./books/detail.html">
 					<div class="bookTxts">
 
 						<div class="booKTxts-Tit">
@@ -477,7 +477,7 @@
 				</a><!-- bookShowCnt -->
 
 
-				<a href="./books/list.asp" class="moShow">
+				<a href="./books/list.html" class="moShow">
 					<div class="mainCntBtn">
 						<span>이달의 교재 더보기</span>
 						<div class="btnArrow bgImageSet"></div>
@@ -509,5 +509,4 @@ $('.headerInc').load('./common/inc/head.html');
 $('.gnbInc').load('./common/inc/gnb.html');
 $('.mainBannerInc').load('./common/inc/mainBanner.html');
 $('.footerInc').load('./common/inc/footer.html');
-
 </script>
