--- a/common/inc/relatedBooks.html
+++ b/common/inc/relatedBooks.html
@@ -1,7 +1,7 @@
 			<section class="mt80 related-sec">
 				<div class="mypageTitWrap">
 					<div class="bkCntInfo-Tit">최근 본 교재</div>
-					<a href="./books/list.asp">더보기 <img src="./common/img/sub/paging-next.png" alt="" class="leftArrow"></a>
+					<a href="./books/list.html">더보기 <img src="./common/img/sub/paging-next.png" alt="" class="leftArrow"></a>
 				</div>
 
 				<div class="relatedBooks">
