--- a/common/inc/userInfo.html
+++ b/common/inc/userInfo.html
@@ -2,7 +2,7 @@
 		<div class="container">
 			<div class="mypageInfo">
 				<div class="profile">
-					<img src="./common/img/sub/sample.png" alt="">
+					<img src=".../common/img/sub/sample.png" alt="">
 				</div>
 				<div class="userInfos">
 					<span class="name pointC">우네띠네</span>님<br>
@@ -15,7 +15,7 @@
 					수강중입니다. -->
 				</div>
 				<div class="userInfoBtns">
-					<div class="userBtn btn"><a href="./mypage/myInfo.asp">회원정보 수정</a></div>
+					<div class="userBtn btn"><a href="./mypage/myInfo.html">회원정보 수정</a></div>
 					<div class="userBtn btn"><a href="">로그아웃</a></div>
 				</div>
 			</div><!-- mapageInfo -->
@@ -23,39 +23,39 @@
 			<div class="userNav">
 				<nav>
 				
-					<div class="userNavList <% If instr(Pagename,"./mypage/purchase.asp") Then%>on<% End If %>">
-						<a href="./mypage/purchase.asp">
+					<div class="userNavList <% If instr(Pagename,"./mypage/purchase.html") Then%>on<% End If %>">
+						<a href="./mypage/purchase.html">
 						<div class="deliver bgImageSet"></div>
-						교재배송 <img src="./common/img/sub/paging-next.png" alt="" class="leftArrow"></a>
+						교재배송 <img src="../common/img/sub/paging-next.png" alt="" class="leftArrow"></a>
 					</div>
 
-					<div class="userNavList pcShow <% If instr(Pagename,"./mypage/cart.asp") Then%>on<% End If %>">
-						<a href="./mypage/cart.asp">
+					<div class="userNavList pcShow <% If instr(Pagename,"./mypage/cart.html") Then%>on<% End If %>">
+						<a href="./mypage/cart.html">
 						<div class="interest bgImageSet"></div>
-						장바구니 <img src="./common/img/sub/paging-next.png" alt="" class="leftArrow"></a>
+						장바구니 <img src="../common/img/sub/paging-next.png" alt="" class="leftArrow"></a>
 					</div>
 
-					<div class="userNavList <% If instr(Pagename,"./mypage/points.asp") Then%>on<% End If %>">
-						<a href="./mypage/points.asp">
+					<div class="userNavList <% If instr(Pagename,"./mypage/points.html") Then%>on<% End If %>">
+						<a href="./mypage/points.html">
 						<div class="points bgImageSet"></div>
-						포인트 <img src="./common/img/sub/paging-next.png" alt="" class="leftArrow"></a>
+						포인트 <img src="../common/img/sub/paging-next.png" alt="" class="leftArrow"></a>
 					</div>
 
 					<!-- 모바일용 글자 축약 .pcShow 사용 -->
-					<div class="userNavList <% If instr(Pagename,"./download/list.asp") Then%>on<% End If %>">
-						<a href="./download/list.asp">
+					<div class="userNavList <% If instr(Pagename,"./download/list.html") Then%>on<% End If %>">
+						<a href="./download/list.html">
 						<div class="download bgImageSet"></div>
-						예제파일<br>다운<span class="pcShow">로드</span> <img src="./common/img/sub/paging-next.png" alt="" class="leftArrow"></a>
+						예제파일<br>다운<span class="pcShow">로드</span> <img src="../common/img/sub/paging-next.png" alt="" class="leftArrow"></a>
 					</div>
-					<div class="userNavList <% If instr(Pagename,"./mypage/inquiry.asp") Then%>on<% End If %>">
-						<a href="./mypage/inquiry.asp">
+					<div class="userNavList <% If instr(Pagename,"./mypage/inquiry.html") Then%>on<% End If %>">
+						<a href="./mypage/inquiry.html">
 						<div class="inquiry bgImageSet"></div>
-						<span class="pcShow">1:1</span><br>문의사항 <img src="./common/img/sub/paging-next.png" alt="" class="leftArrow"></a>
+						<span class="pcShow">1:1</span><br>문의사항 <img src="../common/img/sub/paging-next.png" alt="" class="leftArrow"></a>
 					</div>
 				</nav>
 				
 				<div class="catMidBnr">
-					<!--#include virtual = "./common/inc/midBanner.asp"-->
+					<!--#include virtual = "../common/inc/midBanner.html"-->
 				</div>
 			</div>
 		</div><!-- container -->
