--- a/customer/payment.html
+++ b/customer/payment.html
@@ -1,12 +1,12 @@
 
-<!--#include virtual = "/2023/common/inc/head.asp"-->
+<!--#include virtual = "/2023/common/inc/head.html"-->
 <body>
 
 
 
 <div class="paymentMoWrap">
 <!-- gnb -->
-<!--#include virtual = "/2023/common/inc/gnb.asp"-->
+<!--#include virtual = "/2023/common/inc/gnb.html"-->
 
 
 	
@@ -154,13 +154,13 @@
 
 
 	<div id="ex3" class="modal">
-		<!--#include virtual = "/2023/customer/address_edit.asp"-->
+		<!--#include virtual = "/2023/customer/address_edit.html"-->
 	</div>
 
 
 
 	<!-- footer -->
-	<!--#include virtual = "/2023/common/inc/footer.asp"-->
+	<!--#include virtual = "/2023/common/inc/footer.html"-->
 
 
 </body>
