--- a/customer/policy.html
+++ b/customer/policy.html
@@ -1,7 +1,7 @@
 
 
 
-<!--#include virtual = "/2023/common/inc/head.asp"-->
+<!--#include virtual = "/2023/common/inc/head.html"-->
 
 
 
@@ -11,7 +11,7 @@
 
 <div class="policyWrap">
 <!-- gnb -->
-<!--#include virtual = "/2023/common/inc/gnb.asp"-->
+<!--#include virtual = "/2023/common/inc/gnb.html"-->
 
 
 	
@@ -355,7 +355,7 @@
 
 
 	<!-- footer -->
-	<!--#include virtual = "/2023/common/inc/footer.asp"-->
+	<!--#include virtual = "/2023/common/inc/footer.html"-->
 
 
 </body>
