--- a/customer/privacy.html
+++ b/customer/privacy.html
@@ -1,7 +1,7 @@
 
 
 
-<!--#include virtual = "/2023/common/inc/head.asp"-->
+<!--#include virtual = "/2023/common/inc/head.html"-->
 
 
 
@@ -11,7 +11,7 @@
 
 <div class="policyWrap">
 <!-- gnb -->
-<!--#include virtual = "/2023/common/inc/gnb.asp"-->
+<!--#include virtual = "/2023/common/inc/gnb.html"-->
 
 
 	
@@ -23,7 +23,7 @@
 				</div>
 
 
-					<!--#include virtual = "/2023/customer/privacy_txt.asp"-->
+					<!--#include virtual = "/2023/customer/privacy_txt.html"-->
 
 
 
@@ -37,7 +37,7 @@
 
 
 	<!-- footer -->
-	<!--#include virtual = "/2023/common/inc/footer.asp"-->
+	<!--#include virtual = "/2023/common/inc/footer.html"-->
 
 
 </body>
