--- a/search.html
+++ b/search.html
@@ -1,7 +1,7 @@
 
 
 
-<!--#include virtual = "/2023/common/inc/head.asp"-->
+<!--#include virtual = "/2023/common/inc/head.html"-->
 
 
 
@@ -10,7 +10,7 @@
 
 
 <!-- gnb -->
-<!--#include virtual = "/2023/common/inc/gnb.asp"-->
+<!--#include virtual = "/2023/common/inc/gnb.html"-->
 
 
 <div class="schWrap">
@@ -30,7 +30,7 @@
 			<div class="edulistWrap">
 				<div class="eduList">
 					<div class="eduCntWrap">
-						<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+						<a href="/2023/books/detail.html"><img src="/2023/common/img/main/book-cover01.png" alt="">
 							<div class="eduList-TxtsWrap">
 								<div class="eduListTxts">
 									<div class="delivery">★3월29일배송시작★</div>
@@ -46,7 +46,7 @@
 
 
 					<div class="eduCntWrap">
-						<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+						<a href="/2023/books/detail.html"><img src="/2023/common/img/main/book-cover01.png" alt="">
 							<div class="eduList-TxtsWrap">
 								<div class="eduListTxts">
 									<div class="delivery">★3월29일배송시작★</div>
@@ -61,7 +61,7 @@
 
 
 					<div class="eduCntWrap">
-						<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+						<a href="/2023/books/detail.html"><img src="/2023/common/img/main/book-cover01.png" alt="">
 							<div class="eduList-TxtsWrap">
 								<div class="eduListTxts">
 									<div class="delivery">★3월29일배송시작★</div>
@@ -74,7 +74,7 @@
 					</div>
 
 					<div class="eduCntWrap">
-						<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+						<a href="/2023/books/detail.html"><img src="/2023/common/img/main/book-cover01.png" alt="">
 							<div class="eduList-TxtsWrap">
 								<div class="eduListTxts">
 									<div class="delivery">★3월29일배송시작★</div>
@@ -87,7 +87,7 @@
 					</div>
 
 					<div class="eduCntWrap">
-						<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+						<a href="/2023/books/detail.html"><img src="/2023/common/img/main/book-cover01.png" alt="">
 							<div class="eduList-TxtsWrap">
 								<div class="eduListTxts">
 									<div class="delivery">★3월29일배송시작★</div>
@@ -100,7 +100,7 @@
 					</div>
 
 					<div class="eduCntWrap">
-						<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+						<a href="/2023/books/detail.html"><img src="/2023/common/img/main/book-cover01.png" alt="">
 							<div class="eduList-TxtsWrap">
 								<div class="eduListTxts">
 									<div class="delivery">★3월29일배송시작★</div>
@@ -113,7 +113,7 @@
 					</div>
 
 					<div class="eduCntWrap">
-						<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+						<a href="/2023/books/detail.html"><img src="/2023/common/img/main/book-cover01.png" alt="">
 							<div class="eduList-TxtsWrap">
 								<div class="eduListTxts">
 									<div class="delivery">★3월29일배송시작★</div>
@@ -126,7 +126,7 @@
 					</div>
 
 					<div class="eduCntWrap">
-						<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+						<a href="/2023/books/detail.html"><img src="/2023/common/img/main/book-cover01.png" alt="">
 							<div class="eduList-TxtsWrap">
 								<div class="eduListTxts">
 									<div class="delivery">★3월29일배송시작★</div>
@@ -139,7 +139,7 @@
 					</div>
 
 					<div class="eduCntWrap">
-						<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+						<a href="/2023/books/detail.html"><img src="/2023/common/img/main/book-cover01.png" alt="">
 							<div class="eduList-TxtsWrap">
 								<div class="eduListTxts">
 									<div class="delivery">★3월29일배송시작★</div>
@@ -152,7 +152,7 @@
 					</div>
 
 					<div class="eduCntWrap">
-						<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+						<a href="/2023/books/detail.html"><img src="/2023/common/img/main/book-cover01.png" alt="">
 							<div class="eduList-TxtsWrap">
 								<div class="eduListTxts">
 									<div class="delivery">★3월29일배송시작★</div>
@@ -206,7 +206,7 @@
 
 
 <!-- footer -->
-<!--#include virtual = "/2023/common/inc/footer.asp"-->
+<!--#include virtual = "/2023/common/inc/footer.html"-->
 
 
 </body>
